--- a/global.css
+++ b/global.css
@@ -1,8 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,700&family=Montserrat:wght@500;700&display=swap");
+
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
-/* … */
 
 body {
   background-color: hsl(30, 38%, 92%);
@@ -10,7 +12,6 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  font-family: "Montserrat", sans-serif;
   color: hsl(228, 12%, 48%);
   justify-content: center;
   align-items: center;
@@ -21,62 +22,88 @@ body {
   background-color: white;
   display: flex;
   flex-direction: column;
-  width: 350px;
-  border-radius: 16px;
+  width: 21.4375rem;
+  height: 38.1875rem;
+  border-radius: 0.625rem;
   overflow: hidden;
 }
 
 .main-image {
-  width: 350px;
-  height: 250px;
+  width: 100%;
+  height: 15rem;
+}
+
+.card {
+  margin: 1.5rem;
+}
+
+.category {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 0.75rem;
+  line-height: 0.9375rem;
+  letter-spacing: 5px;
+  color: #6c7289;
+}
+
+.title {
+  font-family: "Fraunces", serif;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 2rem;
+  color: #1c232b;
+  margin-top: 0.75rem;
 }
 
 .description {
-  display: flex;
-  flex-direction: column;
-  gap: 16px;
-  padding: 28px;
-  font-size: 14px;
-}
-
-h1,
-.discounted-price {
-  font-family: "Fraunces", serif;
-}
-
-h1 {
-  color: hsl(212, 21%, 14%);
-  font-size: xx-large;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 0.875rem;
+  line-height: 1.4375rem;
+  color: #6c7289;
+  margin-top: 1rem;
 }
 
 .price-container {
-  padding-top: 16px;
   display: flex;
   gap: 1rem;
   align-items: center;
+  margin-top: 1.5rem;
 }
 
 .discounted-price {
-  color: hsl(158, 36%, 37%);
-  font-size: 32px;
-  font-weight: bold;
+  font-family: "Fraunces", serif;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 2rem;
+  color: #3d8168;
 }
 
 .original-price {
-  text-decoration: line-through;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  font-size: 0.8125rem;
+  line-height: 1.4375rem;
+  text-decoration-line: line-through;
+  color: #6c7289;
 }
 
 .add-cart {
   color: white;
-  background-color: hsl(158, 36%, 37%);
+  background: #3d8168;
   border-radius: 8px;
-  height: 45px;
+  height: 48px;
+  width: 100%;
   border: none;
-  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 1.0625rem;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 12px;
+  gap: 0.6875rem;
+  margin-top: 1.25rem;
 }
 
 .add-cart:hover {
@@ -88,7 +115,8 @@ h1 {
 @media (min-width: 650px) {
   .main-content {
     flex-direction: row;
-    width: 600px;
+    width: 37.5rem;
+    height: 28.125rem;
   }
 
   .main-image {
@@ -96,8 +124,22 @@ h1 {
     height: 100%;
   }
 
+  .card {
+    margin: 2rem;
+  }
+  .title {
+    margin-top: 1.25rem;
+  }
+
   .description {
-    padding: 36px;
-    gap: 2rem;
+    margin-top: 1.5rem;
+  }
+
+  .price-container {
+    margin-top: 1.8125rem;
+  }
+
+  .add-cart {
+    margin-top: 1.875rem;
   }
 }
